containerized elements to prevent overlap of nav, footer and body

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,7 +78,3 @@ h1 {
 .japanese-cursive {
   font-family: 'Yuji Mai', serif;
 }
-
-.giant-header {
-  font-size: 5em;
-}
